[package]
name = "ethabi-decode"
version = "1.1.0"
authors = ["Vincent Geddes <vincent.geddes@hey.com>"]
edition = "2018"

[dependencies]
tiny-keccak = { version = "1.4" }
ethereum-types = { version = "0.9.0", default-features = false }

[dev-dependencies]
hex = { version = "2.0", package = "rustc-hex" }
hex-literal = "0.2.1"
uint = { version = "0.8.2", default-features = false }

[features]
default = ["std"]
std = [
    'ethereum-types/std',
]
