[package]
name = "ethabi-decode"
version = "2.0.0"
authors = ["Vincent Geddes <vincent@snowfork.com"]
edition = "2021"
license = "Apache-2.0"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]
description = "Decoding of ABI-encoded data and event logs"
repository = "https://github.com/Snowfork/ethabi-decode.git"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ethereum-types = { version = "0.15.0", default-features = false }

[dev-dependencies]
hex = { version = "2.0", package = "rustc-hex" }
hex-literal = "0.4.0"
uint = { version = "0.10.0", default-features = false }
paste = "1.0.12"

[features]
default = ["std"]
std = [
    "ethereum-types/std",
]
